dhall/tests/type-inference/failure/unit/IfBranchesNotTermTypeOrKind.txt
Type error: error: IfBranchMustBeTerm
 --> <current file>:1:1
  |
1 | if True then Kind else Kind
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ IfBranchMustBeTerm
  |
